# cheroot

./: .appveyor.yml  .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .hgtags  .mention-bot  .mypy.ini  .pep8  .pip-tools.toml  .pre-commit-config.yaml  .pre-commit-config.yaml.failing  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  .yamllint  .zuul.yaml  CHANGES.rst  LICENSE.md  MANIFEST.in  README.md  README.rst  README.txt  appveyor.yml  bindep.txt  ez_setup.py  mypy.ini  pyproject.toml  pytest.ini  run_docker.sh  setup.cfg  setup.py  stubtest_allowlist.txt  test-cherrypy-master  test_jeff.py  (+4 more)
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  stale.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  config.yml
.github/workflows/: bad-commit-message-blocker.yml  ci-cd.yml  codeql.yml  pip-tools.yml  python-linters.yml  python-tests.yml
.travis/: replace-pypy3
cheroot/: __init__.py  __main__.py  _compat.py  _compat.pyi  cli.py  cli.pyi  compat.py  connections.py  connections.pyi  errors.py  errors.pyi  makefile.py  makefile.pyi  py2makefile.py  py3makefile.py  server.py  server.pyi  testing.py  testing.pyi  wsgi.py  wsgi.pyi
cheroot/ssl/: __init__.py  __init__.pyi  builtin.py  builtin.pyi  pyopenssl.py  pyopenssl.pyi  tls_socket.py
cheroot/ssllib/: __init__.py  ssl_builtin.py  ssl_pyopenssl.py
cheroot/test/: __init__.py  _pytest_plugin.py  benchmark.py  conftest.py  helper.py  test__compat.py  test_cli.py  test_compat.py  test_config_server.py  test_conn.py  test_core.py  test_dispatch.py  test_dynpool.py  test_errors.py  test_http.py  test_https.py  test_makefile.py  test_more.py  test_server.py  test_ssl.py  test_ssl_port_contention.py  test_ssl_pyopenssl.py  test_wsgi.py  test_wsgiapps.py  webtest.py
cheroot/workers/: dynpool.py  monitor.py  threadpool.py  threadpool.pyi
cherrypy/: cherryd
cherrypy/test/: helper.py
dependencies/: dist-build-constraints.in  dist-build-constraints.txt  tests.in  tox-build-dists-cp310-linux-x86_64.txt  tox-build-dists-cp311-linux-x86_64.txt  tox-build-dists-cp39-linux-x86_64.txt  tox-build-dists.in  tox-build-docs-cp310-linux-x86_64.txt  tox-build-docs-cp311-linux-x86_64.txt  tox-build-docs-cp312-linux-x86_64.txt  tox-build-docs-cp313-linux-x86_64.txt  tox-build-docs-cp38-linux-x86_64.txt  tox-build-docs-cp39-linux-x86_64.txt  tox-check-changelog-cp310-linux-x86_64.txt  tox-docs-constraints.in  tox-docs.in  tox-draft-changelog-cp312-linux-x86_64.txt  tox-draft-changelog-cp38-linux-x86_64.txt  tox-draft-changelog-cp39-linux-x86_64.txt  tox-linkcheck-docs-cp310-linux-x86_64.txt  tox-linkcheck-docs-cp311-linux-x86_64.txt  tox-linkcheck-docs-cp312-linux-x86_64.txt  tox-linkcheck-docs-cp313-linux-x86_64.txt  tox-linkcheck-docs-cp38-linux-x86_64.txt  tox-linkcheck-docs-cp39-linux-x86_64.txt  tox-pre-commit-cp310-linux-x86_64.txt  tox-pre-commit-cp311-linux-x86_64.txt  tox-pre-commit-cp312-linux-x86_64.txt  tox-pre-commit-cp313-linux-x86_64.txt  tox-pre-commit-cp314-linux-x86_64.txt  tox-pre-commit-cp39-linux-x86_64.txt  tox-py310-cp310-darwin-arm64.txt  tox-py310-cp310-darwin-x86_64.txt  tox-py310-cp310-linux-aarch64.txt  tox-py310-cp310-linux-x86_64.txt  tox-py310-cp310-win32-amd64.txt  tox-py311-cp311-darwin-arm64.txt  tox-py311-cp311-darwin-x86_64.txt  tox-py311-cp311-linux-aarch64.txt  tox-py311-cp311-linux-x86_64.txt  (+43 more)
docs/: conf.py  contribute.rst  devguide.rst  history.rst  index.rst  requirements.txt  scm_tag_titles_ext.py  spelling_stub_ext.py  spelling_wordlist.txt  structure.rst
docs/_templates/: python_2_eol.html  structure.html
docs/changelog-fragments.d/: .gitignore  27a3c944.packaging.rst  365.bugfix.rst  437863ee.breaking.rst  4fa1e663.contrib.rst  5062385d.contrib.rst  517.bugfix.rst  518.bugfix.rst  565.breaking.rst  5980a3fb.contrib.rst  5db4f634.packaging.rst  628.packaging.rst  649.bugfix.rst  654.contrib.rst  654.packaging.rst  65ba7e69.contrib.rst  676edc4e.contrib.rst  681.contrib.rst  690.packaging.rst  696.packaging.rst  703.contrib.rst  728.bugfix.rst  743.contrib.rst  745.feature.rst  752.feature.rst  755.bugfix.rst  764.bugfix.rst  767.contrib.rst  767.packaging.rst  7676d504.contrib.rst  769.bugfix.rst  770.bugfix.rst  774.bugfix.rst  774.contrib.rst  776.bugfix.rst  776.contrib.rst  777.bugfix.rst  777.contrib.rst  779.bugfix.rst  786.bugfix.rst  (+26 more)
docs/contributing/: guidelines.rst  release_guide.rst
docs/pkg/: cheroot.test.rst  cheroot.workers.rst
requirements/: dist-build-constraints.in  dist-build-constraints.txt  tests.in  tox-build-dists-cp310-linux-x86_64.txt  tox-build-dists-cp311-linux-x86_64.txt  tox-build-dists-cp39-linux-x86_64.in  tox-build-dists-cp39-linux-x86_64.txt  tox-build-docs-cp310-linux-x86_64.txt  tox-build-docs-cp311-linux-x86_64.in  tox-build-docs-cp311-linux-x86_64.txt  tox-build-docs-cp312-linux-x86_64.txt  tox-build-docs-cp313-linux-x86_64.txt  tox-build-docs-cp38-linux-x86_64.txt  tox-build-docs-cp39-linux-x86_64.txt  tox-docs.in  tox-draft-changelog-cp311-linux-x86_64.txt  tox-linkcheck-docs-cp310-linux-x86_64.txt  tox-linkcheck-docs-cp311-linux-x86_64.in  tox-linkcheck-docs-cp311-linux-x86_64.txt  tox-linkcheck-docs-cp312-linux-x86_64.txt  tox-linkcheck-docs-cp313-linux-x86_64.txt  tox-linkcheck-docs-cp38-linux-x86_64.txt  tox-linkcheck-docs-cp39-linux-x86_64.txt  tox-make-changelog-cp313-linux-x86_64.txt  tox-pre-commit-cp310-linux-x86_64.txt  tox-pre-commit-cp311-linux-x86_64.txt  tox-pre-commit-cp39-linux-x86_64.in  tox-pre-commit-cp39-linux-x86_64.txt  tox-pre-commit.in  tox-py27-cp27-darwin-x86_64.txt  tox-py27-cp27-linux-x86_64.txt  tox-py27-cp27-win32-amd64.txt  tox-py27-py27-darwin-x86_64.txt  tox-py27-py27-linux-x86_64.txt  tox-py27-py27-win32-amd64.txt  tox-py310-cp310-darwin-arm64.txt  tox-py310-cp310-darwin-x86_64.txt  tox-py310-cp310-linux-aarch64.txt  tox-py310-cp310-linux-x86_64.txt  tox-py310-cp310-win32-amd64.txt  (+67 more)
sphinx/source/: conf.py
sphinx/util/: convert-trac.py
(+9 files in other folders)
