[build-system]
requires = [
    # Essentials
    "setuptools>=34.4",
    "wheel",

    # Plugins
    "setuptools_scm>=1.15",
    "setuptools_scm_git_archive>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.flakehell]
# optionally inherit from remote config (or local if you want)
#base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
config = ".flake8"
# specify any flake8 options. For example, exclude "example.py":
exclude = [
    ".eggs/",
    ".tox/",
    #"cheroot/test",
]
# make output nice
format = "grouped"
# don't limit yourself
#max_line_length = 120
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakehell.plugins]
pyflakes = ["+*"]
# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]
## enable only codes from S100 to S199
#flake8-bandit = ["-*", "+S1??"]
flake8-bandit = ["+*", "-S101", "-S104", "-S108", "-S309", "-S310", "-S404", "-S603"]
flake8-bugbear = ["+*", "-B007"]
# disabled py3.5/py3.6 specific stuff + allowed trailing tuple comma:
flake8-commas = ["+*", "-C815", "-C816", "-C818"]
flake8-darglint = ["+*", "-DAR003", "-DAR101", "-DAR201", "-DAR202", "-DAR301", "-DAR401"]
flake8-eradicate = ["-*"]
flake8-isort = ["+*", "-I001", "-I003", "-I004"]
# don't fail on unknown docutils roles because sphinx knows them
flake8-rst-docstrings = ["+*", "-RST304", "-RST303", "-RST301", "-RST203", "-RST201"]
