[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = cheroot
author = CherryPy Team
author_email = team@cherrypy.org
description = Highly-optimized, pure-python HTTP server
long_description = file: README.rst
url = https://github.com/cherrypy/cheroot
project_urls =
    CI: AppVeyor = https://ci.appveyor.com/project/cherrypy/cheroot
    CI: Travis = https://travis-ci.org/cherrypy/cheroot
    CI: Circle = https://circleci.com/gh/cherrypy/cheroot
    Docs: RTD = https://cheroot.cherrypy.org
    GitHub: issues = https://github.com/cherrypy/cheroot/issues
    GitHub: repo = https://github.com/cherrypy/cheroot
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: CherryPy
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
keywords =
    http
    server
    ssl
    wsgi

[options]
packages = find:
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0

install_requires =
    backports.functools_lru_cache
    six>=1.11.0
    more_itertools>=2.6

[options.extras_require]
testing =
    # upstream
    pytest >= 3.5, !=3.7.3
    pytest-flake8

    # local
    ddt
    pytest-testmon>=0.9.7
    pytest-watch

    # measure test coverage
    coverage

    # send test coverage to codecov.io
    codecov

    pytest-cov
    backports.unittest_mock

    # TLS
    trustme>=0.4.0
    pyopenssl

docs =
    # upstream
    # sphinx
    jaraco.packaging >= 3.2
    rst.linker >= 1.9

    # local
    sphinx >= 1.8.2
    docutils
    alabaster


[options.entry_points]
console_scripts =
    cheroot = cheroot.cli:main
