[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = cheroot
url = https://cheroot.cherrypy.org
project_urls =
    CI: GitHub = https://github.com/cherrypy/cheroot/actions
    Docs: RTD = https://cheroot.cherrypy.org
    GitHub: issues = https://github.com/cherrypy/cheroot/issues
    GitHub: repo = https://github.com/cherrypy/cheroot
    Tidelift: funding = https://tidelift.com/subscription/pkg/pypi-cheroot?utm_source=pypi-cheroot&utm_medium=referral&utm_campaign=pypi
description = Highly-optimized, pure-python HTTP server
long_description = file: README.rst
author = CherryPy Team
author_email = team@cherrypy.org
license_file = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: CherryPy
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
keywords =
    http
    server
    ssl
    wsgi

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
packages = find:
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
    backports.functools_lru_cache; python_version < '3.3'
    selectors2; python_version< '3.4'
    six>=1.11.0
    more_itertools>=2.6
    jaraco.functools

[options.extras_require]
docs =
    # upstream
    sphinx>=1.8.2
    jaraco.packaging>=3.2
    sphinx-tabs>=1.1.0

    # local
    docutils
    alabaster
    # `scm_tag_titles_ext` extension dep in docs/
    python-dateutil
    sphinxcontrib-apidoc>=0.3.0

testing =
    pytest>=4.6.6
    pytest-forked>=1.1.3; sys_platform != "win32" and python_version >= '3.0' and python_version <= '3.4'
    pytest-forked>=1.2.0; sys_platform != "win32" and (python_version < '3.0' or python_version > '3.4')
    pytest-mock>=1.11.0
    pytest-sugar>=0.9.3
    pytest-watch==4.2.0
    pytest-xdist>=1.28.0

    jaraco.text>=3.1

    # measure test coverage
    coverage==5.3; python_version != "3.4"
    coverage<5; python_version == "3.4"
    # send test coverage to codecov.io
    codecov==2.1.10

    pytest-cov==2.8.1; python_version == "3.4"  # pyup: < 2.9
    pytest-cov==2.10.1; python_version != "3.4"

    # TLS
    trustme>=0.4.0
    pyopenssl

    # HTTP over UNIX socket
    requests-unixsocket

    # This addresses https://github.com/cherrypy/cheroot/issues/173.
    # It's a transitive dependency of requests library.
    # Also: requests>=2.22.0 doesn't support Python 3.4
    # yet requests==2.21.0 doesn't support urllib3>=1.25
    # Allowing requests with a lower urllib3 version
    # so that tests'd pass
    urllib3>=1.25; python_version != "3.4"
    urllib3<1.25; python_version == "3.4"  # pyup: < 1.25

    portend
    requests_toolbelt
    jaraco.context
    futures; python_version == "2.7"

    # Address https://github.com/tartley/colorama/issues/240.
    # It's a transitive dependency of pytest-watch plugin.
    colorama!=0.4.2; python_version == "3.4"
    watchdog<1.0.0; python_version < "3.6"

[options.entry_points]
console_scripts =
    cheroot = cheroot.cli:main
