[bdist_wheel]
# NOTE: "universal = 1" causes `bdist_wheel` to create a wheel that with the
# NOTE: tag "py2.py3" which implies (and tricks pip into thinking) that this
# NOTE: wheel contains Python 2 compatible code. This is not true and conflicts
# NOTE: with the "Requires-Python" field in the metadata that says that we only
# NOTE: support Python 3.6+.
# NOTE: We need to keep it at "0" which will produce wheels tagged with "py3"
# NOTE: when built under Python 3.
# Ref: https://github.com/pypa/packaging.python.org/issues/726
universal = 0

[metadata]
name = cheroot
url = https://cheroot.cherrypy.dev
project_urls =
  CI: GitHub = https://github.com/cherrypy/cheroot/actions
  Docs: RTD = https://cheroot.cherrypy.dev
  GitHub: issues = https://github.com/cherrypy/cheroot/issues
  GitHub: repo = https://github.com/cherrypy/cheroot
  Tidelift: funding = https://tidelift.com/subscription/pkg/pypi-cheroot?utm_source=pypi-cheroot&utm_medium=referral&utm_campaign=pypi
description = Highly-optimized, pure-python HTTP server
long_description = file: README.rst
long_description_content_type = text/x-rst
author = CherryPy Team
author_email = team@cherrypy.dev
license_files =
  LICENSE.md
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  Operating System :: OS Independent
  Framework :: CherryPy
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: HTTP Servers
  Topic :: Internet :: WWW/HTTP :: WSGI
  Topic :: Internet :: WWW/HTTP :: WSGI :: Server
  Typing :: Typed
keywords =
  http
  server
  ssl
  wsgi

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm >= 7.0.0

# These are required in actual runtime:
install_requires =
  importlib_metadata; python_version < '3.8'
  more_itertools >= 2.6
  jaraco.functools

[options.extras_require]
docs =
  # upstream
  sphinx>=1.8.2
  jaraco.packaging>=3.2
  sphinx-tabs>=1.1.0

  # local
  furo
  # `scm_tag_titles_ext` extension dep in docs/
  python-dateutil
  sphinxcontrib-apidoc>=0.3.0

[options.entry_points]
console_scripts =
  cheroot = cheroot.cli:main

[options.package_data]
cheroot = py.typed
